# bitref

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: bitref.yml  workspace.yml
src/: iter.rs  lib.rs  tagged_len.rs
tests/: bitslice.rs
